balancer/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: balancer
    service: backend
  name: balancer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: balancer
  strategy: {}
  template:
    metadata:
      labels:
        app: balancer
    spec:
      containers:
        - image: ghcr.io/codeforphilly/balancer-main/backend
          name: balancer
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
